test: enhance HOCON tests with updated serialized output and comment parsing logic